# pflex-module-rs

./: Cargo.toml  README.md  crates.js  help.html  index.html  mock_robot.py  search-index.js  settings.html  src-files.js
.cargo/: config.toml
.github/workflows/: build.yml  docs.yml
mock_server/: all.html  fn.handle_client.html  fn.main.html  fn.process_command.html  fn.robot_loop.html  index.html  sidebar-items.js  struct.RobotState.html
pflex_module_rs/: all.html  index.html  sidebar-items.js
pflex_module_rs/commands/: enum.TCSCommand.html  index.html  sidebar-items.js
pflex_module_rs/enums/: enum.ParamIDs.html  index.html  sidebar-items.js
pflex_module_rs/error_codes/: enum.ResponseCodes.html  index.html  sidebar-items.js  type.RobotError.html  type.RobotOK.html
pflex_module_rs/pflex/: index.html  sidebar-items.js  struct.PFlexRobot.html  struct.Rail.html
pflex_module_rs/structs/: index.html  sidebar-items.js  struct.EndEffectorPosition.html  struct.MotionProfile.html  struct.Waypoint.html
pflex_module_rs/tcs_client/: enum.TCSCommand.html  index.html  sidebar-items.js  struct.TCSClient.html
search.desc/mock_server/: mock_server-desc-0-.js
search.desc/pflex_module_rs/: pflex_module_rs-desc-0-.js
src/: commands.rs  enums.rs  error_codes.rs  error_codes_test.rs  lib.rs  pflex.rs  pflex_test.rs  structs.rs  tcs_client.rs  tcs_client_test.rs
src/mock_server/: mock_server.rs.html
src/pflex_module_rs/: commands.rs.html  enums.rs.html  error_codes.rs.html  lib.rs.html  pflex.rs.html  (+2 more)
tests/: error_codes_test.rs  pflex_test.rs  tcs_client_test.rs
(+14 files in other folders)
