[package]
name = "pflex-module-rs"
description = "An unnofficial API wrapper for the Brooks Automation PreciseFlex series robot"
version = "0.1.0"
edition = "2021"
license = "GNU"
repository = "https://github.com/euanwm/pflex-module-rs"

[dependencies]
log = "0.4.22"
strum = "0.26.3"
strum_macros = "0.26.4"
